styling updates, mobile responsiveness

--- a/src/app/modules/initial/initial.component.html
+++ b/src/app/modules/initial/initial.component.html
@@ -2,38 +2,63 @@
   <div fxLayout="row" class="header">
     <img src="../../assets/logo_tagline_white.png" alt="Givco Logo" class="header-logo">
   </div>
-  <div fxLayout="row" class="about-container">
+  <div fxLayout="row wrap" class="about-container">
+    <div fxFlex class="about-text" fxLayoutAlign="center center">
+      Givco is a platform designed to give large gifts to organizations through small donations from its users. Every
+      week new non-profits will be features and the Givco userbase will vote on where to send the money.
+    </div>
     <div fxFlex class="phone">
-        <svg width="100%" height="100%" viewBox="150 20 290 300" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet"> 
-          <defs>
+      <svg width="100%" height="100%" viewBox="150 20 290 300" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet">
+        <defs>
           <circle id="sza-b" cx="19.5" cy="19.5" r="19.5"></circle>
           <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-a">
             <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
             <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur>
-            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1"></feColorMatrix>
-          </filter> 
-          <rect id="sza-d" width="96" height="39" rx="1.331"></rect> 
+            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1">
+            </feColorMatrix>
+          </filter>
+          <rect id="sza-d" width="96" height="39" rx="1.331"></rect>
           <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-c">
             <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
             <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur>
-            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1"></feColorMatrix>
+            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1">
+            </feColorMatrix>
           </filter>
-          <rect id="sza-f" width="96" height="39" rx="1.331"></rect> 
+          <rect id="sza-f" width="96" height="39" rx="1.331"></rect>
           <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-e">
             <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
             <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur>
-            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1"></feColorMatrix> </filter> <rect id="sza-h" width="43" height="17" rx="8.5"></rect> <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-g"> <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset> <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur> <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.12 0" in="shadowBlurOuter1"></feColorMatrix> </filter> <path id="sza-j" d="M0 0h156v23H0z"></path> <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-i"> <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset> <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur> <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.12 0" in="shadowBlurOuter1"></feColorMatrix> </filter> </defs> 
-          
-          <g fill="none" fill-rule="evenodd">
-            <path d="M231.98 316c-7.168 0-12.98-5.887-12.98-13.147V32.147C219 24.885 224.812 19 231.98 19h141.038C380.188 19 386 24.885 386 32.147v270.706c0 7.26-5.812 13.147-12.982 13.147H231.98zm-.06-257.655h142.043v210.28H231.92V58.345z" stroke="#00BCD4" class="docs-svg-primary-light-20-stroke" stroke-width="1.1" fill="#FFF"></path>
-            <path d="M318.45 39.056h-31.953c-1.379 0-2.497-1.132-2.497-2.529 0-1.396 1.118-2.527 2.497-2.527h31.953c1.379 0 2.497 1.13 2.497 2.527 0 1.397-1.118 2.53-2.497 2.53z" fill-opacity=".522" fill="#00BCD4" class="docs-svg-primary-light-20-fill"></path>
-            <path d="M312.875 291.471c0 5.783-4.673 10.471-10.438 10.471-5.764 0-10.437-4.688-10.437-10.47 0-5.784 4.673-10.472 10.438-10.472 5.764 0 10.437 4.688 10.437 10.471z" stroke="#00BCD4" class="docs-svg-primary-light-20-stroke" stroke-width="1.1"></path>
-            <path fill-opacity="1" fill="#69eeff" class="docs-svg-primary-light-20-fill" d="M232 59h142v209H232z"></path> 
-          </g>Ï
-          </svg>
-    </div>
-    <div fxFlex class="about-text" fxLayoutAlign="center center">
-      Givco is a platform designed to give large gifts to organizations through small donations from its users. Every week new non-profits will be features and the Givco userbase will vote on where to send the money.
+            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.115913723 0" in="shadowBlurOuter1">
+            </feColorMatrix>
+          </filter>
+          <rect id="sza-h" width="43" height="17" rx="8.5"></rect>
+          <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-g">
+            <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
+            <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur>
+            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.12 0" in="shadowBlurOuter1"></feColorMatrix>
+          </filter>
+          <path id="sza-j" d="M0 0h156v23H0z"></path>
+          <filter x="-50%" y="-50%" width="200%" height="200%" filterUnits="objectBoundingBox" id="sza-i">
+            <feOffset dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
+            <feGaussianBlur stdDeviation=".5" in="shadowOffsetOuter1" result="shadowBlurOuter1"></feGaussianBlur>
+            <feColorMatrix values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.12 0" in="shadowBlurOuter1"></feColorMatrix>
+          </filter>
+        </defs>
+
+        <g fill="none" fill-rule="evenodd">
+          <path
+            d="M231.98 316c-7.168 0-12.98-5.887-12.98-13.147V32.147C219 24.885 224.812 19 231.98 19h141.038C380.188 19 386 24.885 386 32.147v270.706c0 7.26-5.812 13.147-12.982 13.147H231.98zm-.06-257.655h142.043v210.28H231.92V58.345z"
+            stroke="#00BCD4" class="docs-svg-primary-light-20-stroke" stroke-width="1.1" fill="#FFF"></path>
+          <path
+            d="M318.45 39.056h-31.953c-1.379 0-2.497-1.132-2.497-2.529 0-1.396 1.118-2.527 2.497-2.527h31.953c1.379 0 2.497 1.13 2.497 2.527 0 1.397-1.118 2.53-2.497 2.53z"
+            fill-opacity=".522" fill="#00BCD4" class="docs-svg-primary-light-20-fill"></path>
+          <path
+            d="M312.875 291.471c0 5.783-4.673 10.471-10.438 10.471-5.764 0-10.437-4.688-10.437-10.47 0-5.784 4.673-10.472 10.438-10.472 5.764 0 10.437 4.688 10.437 10.471z"
+            stroke="#00BCD4" class="docs-svg-primary-light-20-stroke" stroke-width="1.1"></path>
+          <path fill-opacity="1" fill="#69eeff" class="docs-svg-primary-light-20-fill" d="M232 59h142v209H232z"></path>
+        </g>Ï
+      </svg>
     </div>
   </div>
   <div fxLayout="row">
@@ -41,7 +66,9 @@
   </div>
   <div fxLayout="row" class="email-input">
     <mat-form-field fxFlex color="red">
-      <mat-label><mat-icon class="icon">email</mat-icon>Email</mat-label>
+      <mat-label>
+        <mat-icon class="icon">email</mat-icon>Email
+      </mat-label>
       <input matInput formControlName="email" type="email" />
     </mat-form-field>
   </div>
@@ -49,8 +76,8 @@
     <button mat-button type="submit">SIGN ME UP</button>
   </div>
   <div fxLayout="row" class="social-media" fxLayoutAlign="end center">
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-youtube"></a>
+    <a href="https://www.facebook.com/GIVCOAPP/" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://www.instagram.com/givco_app/" target="_blank" class="fa fa-instagram"></a>
+    <!-- <a href="#" class="fa fa-youtube"></a> -->
   </div>
 </div>
