--- a/src/app/modules/initial/initial.component.scss
+++ b/src/app/modules/initial/initial.component.scss
@@ -15,12 +15,17 @@
 .header-logo {
   max-height: 50%;
   max-width: 50%;
+  min-width: 200px;
   margin: auto;
   background: #00e1fc;
 }
 
 .about-container {
-  margin-bottom: 10px;
+  margin: 10px 0 20px 0;
+}
+
+.phone {
+  min-width: 200px;
 }
 
 .about-text {
@@ -30,7 +35,7 @@
   color: #0071FC;
   background-color: rgba(255, 254, 254);
   text-align: center;
-  font-size: 26px;
+  font-size: 22px;
   margin: 20px 0;
 }
 
@@ -45,6 +50,10 @@
 
 .submit-button{
   background-color: #0071FC;
+}
+
+::ng-deep .mat-form-field-label {
+  color: white !important;
 }
 
 .fa {
