--- a/src/app/modules/initial/initial.component.html
+++ b/src/app/modules/initial/initial.component.html
@@ -65,7 +65,7 @@
     Be the first to hear about our launch and other news!
   </div>
   <div fxLayout="row">
-    <form [formGroup]="emailForm" (ngSubmit)="submitEmail()" #resetEmailForm="ngForm" novalidate>
+  <form [formGroup]="emailForm" (ngSubmit)="submitEmail()" #resetEmailForm="ngForm" novalidate>
       <mat-form-field fxFlex color="red" class="email-input">
         <mat-label>
           <mat-icon class="icon">email</mat-icon>Email
@@ -75,9 +75,12 @@
       </mat-form-field>
     </form>
   </div>
-  <div fxLayout="row" class="submit-button">
-    <button mat-button type="submit">SIGN ME UP</button>
-  </div>
+  <div *ngIf="submitted; else button">Thanks for signing up! You'll hear more from us soon.</div>
+  <ng-template #button>
+    <div fxLayout="row" class="submit-button">
+      <button mat-button type="submit" (click)="submitEmail()">SIGN ME UP</button>
+    </div>
+  </ng-template>
   <div fxLayout="row" class="social-media" fxLayoutAlign="end center">
     <a href="https://www.facebook.com/GIVCOAPP/" target="_blank" class="fa fa-facebook"></a>
     <a href="https://www.instagram.com/givco_app/" target="_blank" class="fa fa-instagram"></a>
