updates svg dims and copy

--- a/src/app/modules/initial/initial.component.html
+++ b/src/app/modules/initial/initial.component.html
@@ -4,11 +4,13 @@
   </div>
   <div fxLayout="row wrap" class="about-container">
     <div fxFlex class="about-text" fxLayoutAlign="center center">
-      Givco is a platform designed to give large gifts to organizations through small donations from its users. Every
-      week new non-profits will be features and the Givco userbase will vote on where to send the money.
+      Givco is a subscription service that connects people with organizations making a difference in the world.<br><br>
+      Subscribe to Givco. Subscribe to good!
+      <!-- Givco is a platform designed to give large gifts to organizations through small donations from its users. Every
+      week new non-profits will be features and the Givco userbase will vote on where to send the money. -->
     </div>
     <div fxFlex class="phone">
-      <svg width="100%" height="100%" viewBox="150 20 290 300" xmlns="http://www.w3.org/2000/svg"
+      <svg width="250" height="300" viewBox="150 20 290 300" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet">
         <defs>
           <circle id="sza-b" cx="19.5" cy="19.5" r="19.5"></circle>
